# dump1090_rs

./: .gitignore  CHANELOG.md  CHANGELOG.md  Cargo.toml  Cross.toml  README.md
.github/: dependabot.yml
.github/workflows/: binaries.yml  main.yml
benches/: demod_benchmark.rs
docker/: README.md  aarch64-unknown-linux-gnu.Dockerfile  armv7-unknown-linux-gnueabihf.Dockerfile  x86_64-unknown-linux-gnu.Dockerfile
docs/: optimizations.md
dump1090_rs/: Cargo.toml  config.toml
dump1090_rs/src/: main.rs  sdrconfig.rs
src/: cpr.rs  crc.rs  demod_2400.rs  icao_filter.rs  lib.rs  mode_ac.rs  rtlsdr.rs  utils.rs
src/mode_s/: decode.rs  mod.rs
src/track/: aircraft.rs  mod.rs
test_iq/: test_1641427457780.iq  test_1641428106243.iq  test_1641428165033.iq
tests/: test.rs  test_00.iq  test_01.iq  test_02.iq
