[package]
name = "dump1090_rs"
version = "0.4.0"
authors = ["Wayne Campbell <wcampbell1995@gmail","John Stanford <johnwstanford@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
clap = {version = "3.0.0", features = ["color", "derive", "wrap_help"]}
lazy_static = "1.4"
libc = "0.2"
hex = "0.4"

[dev-dependencies]
assert_hex = "0.2"
criterion = "0.3"

[[bench]]
name = "demod_benchmark"
harness = false

[profile.release]
lto = true
