[package]
name = "libdump1090_rs"
version = "0.6.0"
authors = ["Wayne Campbell <wcampbell1995@gmail","John Stanford <johnwstanford@gmail.com>"]
edition = "2021"
rust-version = "1.59.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.0"
lazy_static = "1.4.0"
num-complex = "0.4.0"
hexlit = "0.5.0"

[dev-dependencies]
assert_hex = "0.2.0"
criterion = "0.3.0"

[[bench]]
name = "demod_benchmark"
harness = false

[profile.release]
lto = true
strip = true
overflow-checks = true

[workspace]
members = ["dump1090_rs"]
default-members = ["dump1090_rs"]
