[package]
name = "libdump1090_rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[workspace.package]
edition = "2021"
version = "0.6.1"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
num-complex = "0.4.0"
hexlit = "0.5.0"

[dev-dependencies]
assert_hex = "0.4.1"
criterion = "0.5.1"

[[bench]]
name = "demod_benchmark"
harness = false

[profile.release]
lto = true
strip = true
overflow-checks = true

[workspace]
members = ["dump1090_rs"]
default-members = ["dump1090_rs"]
