[package]
name = "dump1090_rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.0", features = ["color", "derive", "wrap_help"]}
num-complex = "0.4.0"
soapysdr = "0.3.2"
libdump1090_rs = { path = "../", version = "0.6.0" }
hex = "0.4.0"
toml = "0.5.8"
serde = { version = "1.0.190", features = ["derive"] }
