[package]
name = "dump1090_rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.8", features = ["color", "derive", "wrap_help"]}
num-complex = "0.4.4"
soapysdr = "0.4.0"
libdump1090_rs = { path = "../", version = "0.8.0" }
hex = "0.4.0"
toml = "0.8.8"
serde = { version = "1.0.211", features = ["derive"] }
